--- a/cryptotracker.web/src/app.css
+++ b/cryptotracker.web/src/app.css
@@ -65,3 +65,14 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+
+@layer base {
+  * {
+    border-color: hsl(var(--border)) !important;
+  }
+
+  body {
+    background-color: hsl(var(--background)) !important;
+    color: hsl(var(--foreground)) !important;
+  }
+}
